# news_digest_mcp_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  news_api.py  vector_store.py
news_digest_mcp_bot/: discord_bot.py  main.py  news_api.py  summarizer.py  vector_store.py
news_digest_mcp_bot/utils/: constant.py  logging.py
tests/: main_test.py
utils/: constant.py  logging.py
